--- a/Pandas_Assignment.ipynb
+++ b/Pandas_Assignment.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "id": "3r-KDLvrO44a"
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "id": "1acwmZanRNHs"
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {
     "id": "WrwHg-hzR5BY"
    },
@@ -273,7 +273,7 @@
        "9         9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {
     "id": "0d2kfemDIYWI"
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "Name: count, Length: 82, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "Name: Age_years, Length: 25420, dtype: object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
        "Name: Age_years, Length: 25420, dtype: float64>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "Name: Age_years, Length: 25420, dtype: float64>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "25419     25419  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -726,13 +726,44 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0\n",
+       "1         1\n",
+       "2         2\n",
+       "3         3\n",
+       "4         4\n",
+       "         ..\n",
+       "25415    77\n",
+       "25416    78\n",
+       "25417    79\n",
+       "25418    80\n",
+       "25419    80\n",
+       "Name: Age_years, Length: 25420, dtype: int32"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.Age_years"
    ]
   },
   {
@@ -755,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +898,7 @@
        "max       80.000000  23060.000000  23090.000000  44473.000000  25419.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1095,7 @@
        "9  NAIROBI         9  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {
     "id": "tTOgnXvuMxcn"
    },
@@ -1086,7 +1117,7 @@
        "40.48780487804878"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {
     "id": "BNegesaWNvQs"
    },
@@ -1110,7 +1141,7 @@
        "763.8725019669552"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1178,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "158"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.District.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "District\n",
+       "HOMABAY             164\n",
+       "KOIBATEK            164\n",
+       "SAMBURU NORTH       164\n",
+       "TRANS NZOIA WEST    164\n",
+       "TRANS NZOIA EAST    164\n",
+       "                   ... \n",
+       "WESTLANDS            82\n",
+       "NAIROBI EAST         82\n",
+       "MOMBASA              82\n",
+       "KILINDINI            82\n",
+       "NAIROBI WEST         82\n",
+       "Name: count, Length: 158, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.District.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {
     "id": "OemJ0HDYOHCq"
    },
@@ -1156,15 +1239,15 @@
      "data": {
       "text/plain": [
        "District\n",
-       "BARINGO          162351\n",
-       "BARINGO NORTH     93789\n",
-       "BOMET            397104\n",
-       "BONDO            157522\n",
-       "BORABU            73426\n",
+       "NAIROBI EAST     1144416\n",
+       "NAIROBI NORTH    1062086\n",
+       "NAIROBI WEST      684765\n",
+       "SIAYA             550224\n",
+       "MOLO              542103\n",
        "Name: Total, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,74 +1255,176 @@
    "source": [
     "# Challenge 4\n",
     "# Which 5 districts were the most densely populated Kenya in descending order?\n",
-    "dense_dist=data.groupby('District')['Total'].sum().head(5)\n",
-    "dense_dist                             \n",
+    "dense_dist=data.groupby(data['District'])[\"Total\"].sum()\n",
+    "dense_data=dense_dist.sort_values(ascending=False).head(5)\n",
+    "dense_data\n",
     "                       \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "id": "CIxC5arSOLak"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County\n",
+       "Nairobi     3138369\n",
+       "Kiambu      1673785\n",
+       "Kakamega    1660651\n",
+       "Nakuru      1603325\n",
+       "Meru        1591533\n",
+       "Name: Total, dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 5\n",
     "# Which 5 counties were the most densely populated Counties in descending order?\n",
-    "#\n"
+    "counties=data.groupby(['County'])['Total'].sum()\n",
+    "dense_count=counties.sort_values(ascending=False).head(5)\n",
+    "dense_count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "id": "gSjjnw56OP8O"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "District\n",
+       "LAIKIPIA NORTH    32762\n",
+       "GARBATULLA        43118\n",
+       "MARSABIT          46502\n",
+       "SAMBURU EAST      59094\n",
+       "SAMBURU NORTH     59801\n",
+       "Name: Total, dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 6\n",
     "# Which 5 districts were the most sparsely populated in descending order?\n",
-    "#\n"
+    "sparse=data.groupby(['District'])['Total'].sum()\n",
+    "sparse_dist=sparse.sort_values(ascending=True).head(5)\n",
+    "sparse_dist\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "id": "UZLYqF7UOTtu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9568.198170731708"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 7\n",
     "# What was the average population of the the most densely populated county in Kenya?\n",
-    "#\n"
+    "na_pop=data[data[\"County\"]==\"Nairobi\"]\n",
+    "na_pop['Total'].mean()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "id": "1qk8wF3MOXDu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County\n",
+       "Lamu             101539\n",
+       "Tharaka Nithi    130098\n",
+       "Isiolo           143294\n",
+       "Samburu          223947\n",
+       "Tana River       240075\n",
+       "Name: Total, dtype: int64"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 8\n",
     "# What was the average population of the the most sparsely populated county in Kenya?\n",
-    "#\n"
+    "dense_count=counties.sort_values(ascending=True).head(5)\n",
+    "dense_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "619.140243902439"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lamu_data=data[data['County']=='Lamu']\n",
+    "lamu_data['Total'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {
     "id": "1V21Beok3Rdc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "743946"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 9\n",
     "# What was the total population of Busia County?\n",
-    "#\n"
+    "busia_data=data[data['County']=='Busia']['Total'].sum()\n",
+    "busia_data\n"
    ]
   },
   {
@@ -1252,46 +1437,94 @@
    "source": [
     "# Challenge 10\n",
     "# What was the average age of person in Busia County? How many people of this age were in Busia County?\n",
-    "#\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many people of this age were in Busia County?\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {
     "id": "8xkStdjdXS3w"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137924"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 11\n",
     "# What was the Total population of Teso South District?\n",
-    "#\n"
+    "teso=data[data[\"District\"]=='TESO SOUTH']\n",
+    "teso_data=data[data['District']=='TESO SOUTH']['Total'].sum()\n",
+    "teso_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "id": "rgVsXH_5XVCh"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12487375"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 12\n",
     "# What was the urban population of Teso South District?\n",
-    "#\n"
+    "teso_urban=data[data['Urban/Rural']=='Urban']['Total'].sum()\n",
+    "teso_urban\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "id": "XvvFWhuDXXeP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26122722"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 13\n",
     "# What was the rural population of Teso South District?\n",
-    "#\n"
+    "#\n",
+    "teso_rural=data[data['Urban/Rural']=='Rural']['Total'].sum()\n",
+    "teso_rural"
    ]
   },
   {
