--- a/Pandas_Assignment.ipynb
+++ b/Pandas_Assignment.ipynb
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {
     "id": "1V21Beok3Rdc"
    },
@@ -1415,7 +1415,7 @@
        "743946"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,31 +1423,204 @@
    "source": [
     "# Challenge 9\n",
     "# What was the total population of Busia County?\n",
-    "busia_data=data[data['County']=='Busia']['Total'].sum()\n",
-    "busia_data\n"
+    "busia_data=data[data['County']=='Busia']\n",
+    "busia_data['Total'].sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "id": "Vtq7pAI73RTZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_15420\\3567402220.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  busia_data['total_age']=busia_data['Age_years']*busia_data['Total']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>District</th>\n",
+       "      <th>Urban/Rural</th>\n",
+       "      <th>Age_years</th>\n",
+       "      <th>Male</th>\n",
+       "      <th>Female</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>total_age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12546</th>\n",
+       "      <td>BUSIA</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>0</td>\n",
+       "      <td>790</td>\n",
+       "      <td>843</td>\n",
+       "      <td>1633</td>\n",
+       "      <td>Busia</td>\n",
+       "      <td>WESTERN</td>\n",
+       "      <td>12546</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12547</th>\n",
+       "      <td>BUSIA</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>1</td>\n",
+       "      <td>679</td>\n",
+       "      <td>649</td>\n",
+       "      <td>1328</td>\n",
+       "      <td>Busia</td>\n",
+       "      <td>WESTERN</td>\n",
+       "      <td>12547</td>\n",
+       "      <td>1328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12548</th>\n",
+       "      <td>BUSIA</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>2</td>\n",
+       "      <td>715</td>\n",
+       "      <td>725</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>Busia</td>\n",
+       "      <td>WESTERN</td>\n",
+       "      <td>12548</td>\n",
+       "      <td>2880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12549</th>\n",
+       "      <td>BUSIA</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>3</td>\n",
+       "      <td>709</td>\n",
+       "      <td>699</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>Busia</td>\n",
+       "      <td>WESTERN</td>\n",
+       "      <td>12549</td>\n",
+       "      <td>4224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12550</th>\n",
+       "      <td>BUSIA</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>4</td>\n",
+       "      <td>675</td>\n",
+       "      <td>655</td>\n",
+       "      <td>1330</td>\n",
+       "      <td>Busia</td>\n",
+       "      <td>WESTERN</td>\n",
+       "      <td>12550</td>\n",
+       "      <td>5320</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      District Urban/Rural  Age_years  Male  Female  Total County Province  \\\n",
+       "12546    BUSIA       Urban          0   790     843   1633  Busia  WESTERN   \n",
+       "12547    BUSIA       Urban          1   679     649   1328  Busia  WESTERN   \n",
+       "12548    BUSIA       Urban          2   715     725   1440  Busia  WESTERN   \n",
+       "12549    BUSIA       Urban          3   709     699   1408  Busia  WESTERN   \n",
+       "12550    BUSIA       Urban          4   675     655   1330  Busia  WESTERN   \n",
+       "\n",
+       "       OBJECTID  total_age  \n",
+       "12546     12546          0  \n",
+       "12547     12547       1328  \n",
+       "12548     12548       2880  \n",
+       "12549     12549       4224  \n",
+       "12550     12550       5320  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 10\n",
-    "# What was the average age of person in Busia County? How many people of this age were in Busia County?\n",
-    "\n"
+    "# What was the average age of person in Busia County? \n",
+    "busia_data.head()\n",
+    "busia_data['total_age']=busia_data['Age_years']*busia_data['Total']\n",
+    "busia_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.688782519161336"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_age=busia_data['total_age'].sum()\n",
+    "age_sum=busia_data['Total'].sum()\n",
+    "avg_age=total_age/age_sum\n",
+    "avg_age.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17217"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#How many people of this age were in Busia County?\n",
-    "#"
+    "age_20=busia_data[busia_data['Age_years']==20]\n",
+    "age_20['Total'].sum()"
    ]
   },
   {
@@ -1478,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "metadata": {
     "id": "rgVsXH_5XVCh"
    },
@@ -1486,10 +1659,10 @@
     {
      "data": {
       "text/plain": [
-       "12487375"
+       "26162"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,13 +1670,13 @@
    "source": [
     "# Challenge 12\n",
     "# What was the urban population of Teso South District?\n",
-    "teso_urban=data[data['Urban/Rural']=='Urban']['Total'].sum()\n",
+    "teso_urban=teso[teso['Urban/Rural']=='Urban']['Total'].sum()\n",
     "teso_urban\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {
     "id": "XvvFWhuDXXeP"
    },
@@ -1511,10 +1684,10 @@
     {
      "data": {
       "text/plain": [
-       "26122722"
+       "111762"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,35 +1696,66 @@
     "# Challenge 13\n",
     "# What was the rural population of Teso South District?\n",
     "#\n",
-    "teso_rural=data[data['Urban/Rural']=='Rural']['Total'].sum()\n",
+    "teso_rural=teso[teso['Urban/Rural']=='Rural']['Total'].sum()\n",
     "teso_rural"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "id": "q1iq02FuXc2R"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1947137"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Challenge 14\n",
     "# What was the population of people aged 60 and above in Kenya?\n",
-    "#\n"
+    "above_60=data[data['Age_years']>=60]\n",
+    "above_60['Total'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "id": "drAWpxBZXhcF"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12487375"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Challenge 15\n",
+    "# What was the urban population in Kenya?\n",
+    "urban_pop=data[data['Urban/Rural']=='Urban']\n",
+    "urban_pop['Total'].sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "drAWpxBZXhcF"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# Challenge 15\n",
-    "# What was the urban population in Kenya?\n",
-    "#\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
